fix two spelling errors

--- a/MyLibrary.bib
+++ b/MyLibrary.bib
@@ -4410,12 +4410,10 @@ Publisher: Nature Publishing Group},
 	file = {Milkoreit, Manjana - 2013 - Mindmade Politics - The Role of Cognition in Globa.pdf:C\:\\Users\\fenn\\Zotero\\storage\\74FMY98V\\Milkoreit, Manjana - 2013 - Mindmade Politics - The Role of Cognition in Globa.pdf:application/pdf},
 }
 
-@article{rhea_valence_2020,
+@misc{rhea_valence_2020,
 	title = {Valence {Software} {Release}},
 	url = {https://osf.io/9tza2/},
-	doi = {10.17605/OSF.IO/9TZA2},
 	abstract = {Valence software tool for creating cognitive affective maps},
-	language = {en},
 	urldate = {2022-07-22},
 	author = {Rhea, Carter and Reuter, Lisa and Thibeault, Christian and Piereder, Jinelle},
 	month = aug,
