--- a/MyLibrary.bib
+++ b/MyLibrary.bib
@@ -4448,7 +4448,7 @@ a novel concept graph that is able to represent cognitions and affects of somebo
   issn         = {2767-3200},
   note         = {Publisher: Public Library of Science},
   number       = {6},
-  pages        = {e0000207},
+  pages        = {1-25},
   volume       = {2},
   abstract     = {The best combination of possible climate policy options (mitigation, adaptation and different climate engineering technologies) to tackle climate change is unknown. Climate policy is facing a hard decision in answering the question whether climate engineering technologies should be researched, limitedly deployed or even deployed at global scale. Such technologies bear large epistemic and ethical uncertainties and their use as well as non-use might have severe consequences. To deal with such uncertainties, the (ethical) assessment of climate engineering technologies should include the perspectives of various stakeholders including laypersons to inform climate policy. To facilitate (ethical) technology assessment, we propose a novel 2-step methodology to collect and analyze data on ethical concerns and the acceptability of climate engineering technologies. Thereby we focus on Stratospheric Aerosol Injection ({SAI}) as an use case. We propose an innovative combination of newly developed methods consisting of two data collection tools (Cognitive-Affective Mapping and large-scale survey) and two types of data analyses (using graph theory and factor analysis). Applying this multi-method approach we were able to identify (1) central ethical and governance related concerns regarding {SAI} (by Cognitive-Affective Maps) and (2) to estimate the relative importance of core constructs (positive and negative affect, risk and benefit perception, trust) on the acceptability of {SAI} (by large-scale survey).},
   date         = {2023-06-06},
