Additional Resources adjusted

--- a/MyLibrary.bib
+++ b/MyLibrary.bib
@@ -547,24 +547,6 @@
 	file = {Rubin - 1996 - Multiple Imputation after 18+ Years.pdf:C\:\\Users\\fenn\\Zotero\\storage\\8KUZL5IE\\Rubin - 1996 - Multiple Imputation after 18+ Years.pdf:application/pdf;Snapshot:C\:\\Users\\fenn\\Zotero\\storage\\7ULVB578\\01621459.1996.html:text/html},
 }
 
-@article{luthardt_quantifying_2022-1,
-	title = {Quantifying emotionally grounded discursive knowledge with cognitive-affective maps},
-	volume = {56},
-	issn = {0033-5177, 1573-7845},
-	url = {https://link.springer.com/10.1007/s11135-021-01195-7},
-	doi = {10.1007/s11135-021-01195-7},
-	abstract = {Belief systems matter for all kinds of human social interaction. People have individual cognitions and feelings concerning processes in their environment, which is why they may evaluate them differently. Belief systems can be visualized with cognitive-affective maps (CAMs; as reported by Thagard (in: McGregor (ed) EMPATHICA: A computer support system with visual representations for cognitive-affective mapping, AAAI Press, CA, 2010)). However, it is unclear whether CAMs can be constructed in an intersubjective way by different researchers attempting to map the beliefs of a third party based on qualitative text data. To scrutinize this question, we combined qualitative strategies and quantitative methods of text and network analysis in a case study examining belief networks about participation. Our data set consists of 10 sets of two empirical CAMs: the first CAM was created based on participants’ freely associating concepts related to participation in education (N = 10), the second one was created based on given text data which the participants represented as a CAM following a standardized instruction manual (N = 10). Both CAM-types were compared along three dimensions of similarity (network similarity, concept association similarity, affective similarity). On all dimensions of similarity, there was substantially higher intersubjective agreement in the text-based CAMs than in the free CAMs, supporting the viability of cognitive affective mapping as an intersubjective research method for studying the emotional coherence of belief systems and discursive knowledge. In addition, this study highlights the potential for identifying group-level differences based on how participants associate concepts.},
-	language = {en},
-	number = {3},
-	urldate = {2022-07-06},
-	journal = {Quality \& Quantity},
-	author = {Luthardt, Jasmin and Morgan, Jonathan Howard and Bormann, Inka and Schröder, Tobias},
-	month = jun,
-	year = {2022},
-	pages = {1557--1595},
-	file = {Full Text:C\:\\Users\\fenn\\Zotero\\storage\\59JXJPKN\\Luthardt et al. - 2022 - Quantifying emotionally grounded discursive knowle.pdf:application/pdf},
-}
-
 @article{luthardt_and_2020,
 	title = {“{And} {Then} {We}’ll {Just} {Check} {If} {It} {Suits} {Us}” – {Cognitive}-{Affective} {Maps} of {Social} {Innovation} in {Early} {Childhood} {Education}},
 	volume = {5},
@@ -1811,14 +1793,6 @@ Publisher: American Psychological Association},
 	title = {Bioinspired {Technologies} and their {Concept} of {Life}: {Advantages} of an {Interdisciplinary} {Approach} using {Cognitive}-{Affective} {Mapping}},
 	author = {Livanec, S. and P, Höfele and Fenn, J. and Reuter, L. and Stumpf, M. and Hühn, L. and Kiesel, A.},
 	annote = {Unpublished manuscript},
-}
-
-@unpublished{hofele_connecting_2022,
-	title = {Connecting the methods of {Psychology} and {Philosophy}: {Applying} {Cognitive} affective maps ({CAMs}) for identifying ethical principles underlying the evaluation of bioinspired technologies},
-	author = {Höfele*, P. and Reuter*, L. and Estadieu, L. and Livanec, S. and Stumpf, M. and Kiesel, A.},
-	year = {2022},
-	note = {Manuscript submitted for publication},
-	annote = {Manuscript submitted for publication},
 }
 
 @book{grunwald_handbuch_2021,
@@ -4432,14 +4406,6 @@ a novel concept graph that is able to represent cognitions and affects of somebo
   url         = {https://www.researchgate.net/publication/354095986_Kostbare_Kisten_Grunde_fur_Fehleinschatzungen_der_Kosten_des_eigenen_Autos_und_deren_Auswirkungen_auf_die_Bewertung_des_OPNV_-Masterarbeit},
 }
 
-@unpublished{fenn_identifying_2022,
-	location = {Institute of Psychology, University of Freiburg},
-	title = {Identifying Key-Psychological Factors Influencing the Acceptance of yet Emerging Technologies – A Multi-Method-Approach to Inform Climate Policy},
-	author = {Fenn, Julius and Helm, Jessica and Höfele, Philipp and Ernst, Andreas and Kiesel, Andrea},
-	date = {2022},
-	note = {Manuscript in preparation},
-}
-
 @Article{fennIdentifyingKeypsychologicalFactors2023,
   author       = {Fenn, Julius and Helm, Jessica F. and Höfele, Philipp and Kulbe, Lars and Ernst, Andreas and Kiesel, Andrea},
   journal      = {Plos Climate},
@@ -4459,6 +4425,260 @@ a novel concept graph that is able to represent cognitions and affects of somebo
   shortjournal = {{PLOS} Climate},
   url          = {https://journals.plos.org/climate/article?id=10.1371/journal.pclm.0000207},
   urldate      = {2023-06-07},
+}
+
+@phdthesis{rothmannCognitiveAffectiveMapsVerstandnis2022,
+	title = {Cognitive-{Affective} {Maps} - {Verständnis} für {Konzeptzusammenhänge} in {Abhängigkeit} der {Valenzen}},
+	url = {https://www.psychologie.uni-freiburg.de/abteilungen/Allgemeine.Psychologie/research/cam-research/rothmann2022.pdf},
+	school = {University of Freiburg, Germany},
+	author = {Rothmann, Wanda},
+	year = {2022},
+	file = {Rothmann - 2022 - Cognitive-Affective Maps - Verständnis für Konzept.pdf:C\:\\Users\\fenn\\Zotero\\storage\\GC7LPMIN\\Rothmann - 2022 - Cognitive-Affective Maps - Verständnis für Konzept.pdf:application/pdf},
+}
+
+@phdthesis{zhouNotMyCity2023,
+	title = {({Not}) {In} {My} {City}: {An} {Explorative} {Study} on {Social} {Acceptance} of {Photovoltaic} {Modules} in {Urban} {Areas}},
+	abstract = {Regarding the expansion of renewable energy, existing buildings provide high surface potential for photovoltaic (PV) installations. When deciding whether a building is suitable for solar energy harvesting, social acceptance needs to be taken into account. However, little research has been done so far regarding which buildings are socially acceptable for PV installations. In two explorative studies, we investigated the building-specific acceptance of PV installations under consideration of new PV module designs.},
+	language = {en},
+	school = {University of Freiburg, Germany},
+	author = {Zhou, Angela},
+	year = {2023},
+	note = {not published},
+	file = {Zhou - (Not) In My City An Explorative Study on Social A.pdf:C\:\\Users\\fenn\\Zotero\\storage\\5YRMAKL2\\Zhou - (Not) In My City An Explorative Study on Social A.pdf:application/pdf},
+}
+
+@phdthesis{clappMappingComparingPolitical2021,
+	title = {Mapping and {Comparing} {Political} {Ideologies}, {Masculinity} {Ideologies}, and {Shame} {Ideologies}},
+	abstract = {This study explored the relationships among political ideologies, masculinity ideologies, and shame ideologies within three online communities. Three different ideological communities, all on Reddit (a discussion-based social news website), were chosen based on previous research suggesting they differ in terms of their conceptualizations of gender and support for or rejection of feminism: r/TheRedPill, r/MensRights, and r/MensLib. This study uses a framework for understanding Ideologies as Complex Adaptive Systems (ICAS) as articulated by Thagard (2017), which uses Cognitive and Affective Maps (CAMs) as its primary tool of analysis. Using the postings on the Reddit sites as our raw data, we created CAMs to assist in comparing the conceptual and affective qualities of each community. We conducted the study in three phases: in Phase One, we used Consensual Qualitative Research (CQR) methods and correlational analyses to create a set of general ideological CAMs for each community. We also constructed a set of CAMs depicting whom each group views as ingroups and outgroups in their creation of social identities. In Phase Two, we created a set of CAMs for each community’s dominant conception of gender. In Phase Three, we constructed a set of CAMs depicting each community’s relationship with the ideas of shame and injustice. 
+The discussion section is organized into five main chapters. The first chapter contains reflections on the process of using CAMs, the next chapter is on the study’s limitations and future directions, and the final three are on the study findings’ empirical, theoretical, and clinical implications. The empirical implications of the study contribute to the following areas of research: the role of shame in ideology, the political construction of victimhood, and Ambivalent Sexism. In the theoretical implications chapter, I discuss the study’s potential contributions to theory development in the CAMs methodology. The final chapter offers reflections on the study's clinical implications, especially related to gender identity development, sexual violence, and the role of ideology in emotion regulation.
+Keywords: political ideology, masculinity, gender ideologies, shame, ressentiment, Complex Adaptive Systems},
+	school = {Suffolk University},
+	author = {Clapp, Megan},
+	month = apr,
+	year = {2021},
+	doi = {10.13140/RG.2.2.29522.07360},
+	file = {Full Text PDF:C\:\\Users\\fenn\\Zotero\\storage\\D3MAMIJP\\Clapp - 2021 - Mapping and Comparing Political Ideologies, Mascul.pdf:application/pdf},
+}
+
+@article{thagardCognitiveScienceCOVID192021,
+	series = {{COVID}-19 and multidimensional epidemic patterns},
+	title = {The cognitive science of {COVID}-19: {Acceptance}, denial, and belief change},
+	volume = {195},
+	issn = {1046-2023},
+	shorttitle = {The cognitive science of {COVID}-19},
+	url = {https://www.sciencedirect.com/science/article/pii/S104620232100075X},
+	doi = {10.1016/j.ymeth.2021.03.009},
+	abstract = {Because the spread of pandemics depends heavily on human choices and behaviors, dealing with COVID-19 requires insights from cognitive science which integrates psychology, neuroscience, computer modeling, philosophy, anthropology, and linguistics. Cognitive models can explain why scientists adopt hypotheses about the causes and treatments of disease based on explanatory coherence. Irrational deviations from good reasoning are explained by motivated inference in which conclusions are influenced by personal goals that contribute to emotional coherence. Decisions about COVID-19 can also be distorted by well-known psychological and neural mechanisms. Cognitive science provides advice about how to improve human behavior in pandemics by changing beliefs and by improving behaviors that result from intention-action gaps.},
+	language = {en},
+	urldate = {2022-09-26},
+	journal = {Methods},
+	author = {Thagard, Paul},
+	month = nov,
+	year = {2021},
+	keywords = {Psychology, Cognitive science, Causes, COVID-19, Decisions, Explanatory coherence, Intention-action gaps, Motivated inference},
+	pages = {92--102},
+	file = {Full Text:C\:\\Users\\fenn\\Zotero\\storage\\VALF5EHC\\Thagard - 2021 - The cognitive science of COVID-19 Acceptance, den.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\fenn\\Zotero\\storage\\JTCMYGFT\\S104620232100075X.html:text/html},
+}
+
+@article{thagardSocialEqualityCognitive2018,
+	title = {Social {Equality}: {Cognitive} {Modeling} {Based} on {Emotional} {Coherence} {Explains} {Attitude} {Change}},
+	volume = {5},
+	issn = {2372-7322},
+	shorttitle = {Social {Equality}},
+	url = {https://doi.org/10.1177/2372732218782995},
+	doi = {10.1177/2372732218782995},
+	abstract = {Why do people have conflicting views of equality concerning the distribution of income, wealth, and satisfaction of vital needs? How do people form and sometimes change their views of equality and related issues, such as gender identity? Answers to such questions can benefit from cognitive science—the interdisciplinary field that includes neuroscience and computer modeling as well as psychology. According to principles of emotional coherence, attitudes develop and change because of connections among the values attached to systems of concepts, beliefs, and goals. People attach a positive value to concepts such as equality, if the concept fits with other positive concepts such as human needs, and opposes negative concepts such as poverty. Emotional coherence balances positive and negative values to yield an overall conclusion. Computer models based on emotional coherence explain people’s differing attitudes about equality and issues such as transgender rights. They also model how people sometimes change their minds.},
+	language = {en},
+	number = {2},
+	urldate = {2023-07-10},
+	journal = {Policy Insights from the Behavioral and Brain Sciences},
+	author = {Thagard, Paul},
+	month = oct,
+	year = {2018},
+	note = {Publisher: SAGE Publications},
+	pages = {247--256},
+	file = {SAGE PDF Full Text:C\:\\Users\\fenn\\Zotero\\storage\\84S9Y4EP\\Thagard - 2018 - Social Equality Cognitive Modeling Based on Emoti.pdf:application/pdf},
+}
+
+@incollection{thagardCognitiveAffectiveStructure2015,
+	address = {Dordrecht},
+	series = {Advances in {Group} {Decision} and {Negotiation}},
+	title = {The {Cognitive}–{Affective} {Structure} of {Political} {Ideologies}},
+	isbn = {978-94-017-9963-8},
+	url = {https://doi.org/10.1007/978-94-017-9963-8_3},
+	abstract = {This chapter displays the structure of ideologies using a new technique called cognitive–affective mapping, portraying the cognitive and emotional relations in both left-wing and right-wing ideologies. The technique is expanded to allow multimodal representations such as pictures and sounds in addition to verbal concepts, with Nazi ideology as an illustration. The cognitive–affective maps are based on a theory of emotional coherence that can explain why people are attracted to various ideologies. The psychological theory of emotional coherence meshes well with social mechanisms of cognitive and emotional transfer that can explain how ideologies spread through groups of individuals.},
+	language = {en},
+	urldate = {2022-11-18},
+	booktitle = {Emotion in {Group} {Decision} and {Negotiation}},
+	publisher = {Springer Netherlands},
+	author = {Thagard, Paul},
+	editor = {Martinovsky, Bilyana},
+	year = {2015},
+	doi = {10.1007/978-94-017-9963-8_3},
+	keywords = {Emotion, Cognitive–affective maps, Empathy, Group decision taking, Ideology, Negotiation},
+	pages = {51--71},
+	file = {Thagard - 2015 - The Cognitive–Affective Structure of Political Ide.pdf:C\:\\Users\\fenn\\Zotero\\storage\\QDC36HXB\\Thagard - 2015 - The Cognitive–Affective Structure of Political Ide.pdf:application/pdf;thagard2015cognitive_P51-71.pdf:C\:\\Users\\fenn\\Zotero\\storage\\I7DF4DV6\\thagard2015cognitive_P51-71.pdf:application/pdf},
+}
+
+@article{findlayEmotionalChangeInternational2014,
+	title = {Emotional {Change} in {International} {Negotiation}: {Analyzing} the {Camp} {David} {Accords} {Using} {Cognitive}-{Affective} {Maps}},
+	volume = {23},
+	issn = {1572-9907},
+	shorttitle = {Emotional {Change} in {International} {Negotiation}},
+	url = {https://doi.org/10.1007/s10726-011-9242-x},
+	doi = {10.1007/s10726-011-9242-x},
+	abstract = {This paper uses a new diagramming method, cognitive-affective mapping, to analyze the emotional changes in the 1978 Camp David negotiations that led to a breakthrough accord between Egypt and Israel. We use the technique to model the mental states of the two primary negotiators, Anwar Sadat and Menachem Begin, based on detailed descriptions provided in Jimmy Carter’s memoirs. From Carter’s account of the emotional states of the Egyptian and Israeli leaders, we generate maps that show how the attitudes of both Sadat and Begin shifted over the course of the deliberations, eventually leading to resolution of a major conflict. Such methods for facilitating recognition and reconciliation of emotional differences between disputants may contribute to movement toward peaceful and satisfying settlements.},
+	language = {en},
+	number = {6},
+	urldate = {2022-11-18},
+	journal = {Group Decis Negot},
+	author = {Findlay, Scott D. and Thagard, Paul},
+	month = nov,
+	year = {2014},
+	keywords = {Attitudes, Emotion, Cognition, Negotiation, Camp David accords, Conflict resolution, Diagrams},
+	pages = {1281--1300},
+	file = {Full Text PDF:C\:\\Users\\fenn\\Zotero\\storage\\G8I83A4J\\Findlay and Thagard - 2014 - Emotional Change in International Negotiation Ana.pdf:application/pdf},
+}
+
+@article{thagardEmotionalConsciousnessNeural2008,
+	title = {Emotional consciousness: {A} neural model of how cognitive appraisal and somatic perception interact to produce qualitative experience},
+	volume = {17},
+	issn = {1053-8100},
+	shorttitle = {Emotional consciousness},
+	url = {https://www.sciencedirect.com/science/article/pii/S1053810007000578},
+	doi = {10.1016/j.concog.2007.05.014},
+	abstract = {This paper proposes a theory of how conscious emotional experience is produced by the brain as the result of many interacting brain areas coordinated in working memory. These brain areas integrate perceptions of bodily states of an organism with cognitive appraisals of its current situation. Emotions are neural processes that represent the overall cognitive and somatic state of the organism. Conscious experience arises when neural representations achieve high activation as part of working memory. This theory explains numerous phenomena concerning emotional consciousness, including differentiation, integration, intensity, valence, and change.},
+	language = {en},
+	number = {3},
+	urldate = {2022-11-18},
+	journal = {Consciousness and Cognition},
+	author = {Thagard, Paul and Aubie, Brandon},
+	month = sep,
+	year = {2008},
+	keywords = {Emotion, Cognitive appraisal, Coherence, Consciousness, Emotional change, Neural mechanisms, Representation, Somatic perception, Valence, Working memory},
+	pages = {811--834},
+	file = {ScienceDirect Snapshot:C\:\\Users\\fenn\\Zotero\\storage\\9Z7H4DQG\\S1053810007000578.html:text/html;Submitted Version:C\:\\Users\\fenn\\Zotero\\storage\\C8WG4YCE\\Thagard and Aubie - 2008 - Emotional consciousness A neural model of how cog.pdf:application/pdf},
+}
+
+@article{hofeleConnectingMethodsPsychology2022,
+	title = {Connecting the methods of psychology and philosophy: {Applying} {Cognitive}-{Affective} {Maps} ({CAMs}) to identify ethical principles underlying the evaluation of bioinspired technologies},
+	volume = {0},
+	issn = {0951-5089},
+	shorttitle = {Connecting the methods of psychology and philosophy},
+	url = {https://doi.org/10.1080/09515089.2022.2113770},
+	doi = {10.1080/09515089.2022.2113770},
+	abstract = {One major challenge of the 21st century is the increasingly rapid development of new technologies and their evaluation. In this article we argue for an interdisciplinary approach to meet this demand for evaluating new and specifically bioinspired technologies. We combine the consideration of normative principles in the field of ethics with psychological-empirical research on attitudes. In doing so, the paper has a twofold concern: first, we discuss how such an interdisciplinary collaboration can be implemented by using the method of Cognitive-Affective Mapping. Cognitive-Affective Maps (CAMs) enable a graphical representation of attitudes, including cognitive and affective aspects. Second, we argue that CAMs can be helpful to remedy the deficits of traditional ethical approaches. We applied CAMs in the context of an ethics seminar in which students were instructed to create CAMs based on bioinspired technologies twice – prior to the seminar to assess their evaluation on bioinspired technologies per se (pre-assessment) and after the seminar to assess how their evaluation might have changed and especially which normative ethical principles might have been additionally considered (post-assessment). As could be shown, CAMs can visualize the students’ attitudes, including the valence of ethical principles. Further, comparing pre- and post-CAMs indicated students’ attitude change.},
+	number = {0},
+	urldate = {2022-11-17},
+	journal = {Philosophical Psychology},
+	author = {Höfele, Philipp and Reuter, Lisa and Estadieu, Louisa and Livanec, Sabrina and Stumpf, Michael and Kiesel, Andrea},
+	month = sep,
+	year = {2022},
+	note = {Publisher: Routledge
+\_eprint: https://doi.org/10.1080/09515089.2022.2113770},
+	keywords = {empirical ethics, cognitive affective mapping, ethical principles, Evaluation of bioinspired technologies, interdisciplinarity},
+	pages = {1--24},
+	file = {Höfele et al. - 2022 - Connecting the methods of psychology and philosoph.pdf:C\:\\Users\\fenn\\Zotero\\storage\\24WTS3YZ\\Höfele et al. - 2022 - Connecting the methods of psychology and philosoph.pdf:application/pdf},
+}
+
+@article{yilmazComputationalModelsEthical2017,
+	series = {Situation {Awareness} in {Human}-{Machine} {Interactive} {Systems}},
+	title = {Computational models of ethical decision-making: {A} coherence-driven reflective equilibrium model},
+	volume = {46},
+	issn = {1389-0417},
+	shorttitle = {Computational models of ethical decision-making},
+	url = {https://www.sciencedirect.com/science/article/pii/S1389041716301218},
+	doi = {10.1016/j.cogsys.2017.02.005},
+	abstract = {There are scientific and technical challenges that must be addressed in developing systems that interact with humans and work along with other agents in complex, dynamic, and uncertain environments where ethical concerns may arise. In such systems relationships between users and autonomous components will be driven as much by issues such as trust, responsibility, and acceptability, as technical ones such as planning and coordination. This paper provides a comprehensive review and classification of existing methods in machine ethics, resulting in delineation of specific challenges and issues. To address the identified challenges, we introduce a method that leverages the method of reflective equilibrium and the multi-coherence theory as a unifying constraint satisfaction framework to simultaneously assess multiple ethical principles and manage ethical conflicts in a context-sensitive manner.},
+	language = {en},
+	urldate = {2022-09-26},
+	journal = {Cognitive Systems Research},
+	author = {Yilmaz, Levent and Franco-Watkins, Ana and Kroecker, Timothy S.},
+	month = dec,
+	year = {2017},
+	keywords = {Cognitive agent, Cognitive coherence, Decision-making, Machine ethics, Reflective equilibrium},
+	pages = {61--74},
+	file = {ScienceDirect Snapshot:C\:\\Users\\fenn\\Zotero\\storage\\GH2U668D\\S1389041716301218.html:text/html;Yilmaz et al. - 2017 - Computational models of ethical decision-making A.pdf:C\:\\Users\\fenn\\Zotero\\storage\\72JFFHB5\\Yilmaz et al. - 2017 - Computational models of ethical decision-making A.pdf:application/pdf},
+}
+
+@book{milkoreitMindmadePoliticsCognitive2017,
+	title = {Mindmade {Politics}: {The} {Cognitive} {Roots} of {International} {Climate} {Governance}},
+	isbn = {978-0-262-34058-8},
+	shorttitle = {Mindmade {Politics}},
+	url = {https://direct.mit.edu/books/book/3122/Mindmade-PoliticsThe-Cognitive-Roots-of},
+	abstract = {How integrating cognitive theories and international relations scholarship can yield valuable insights into the effectiveness of climate negotiations.Mindmade P},
+	language = {en},
+	urldate = {2023-07-10},
+	publisher = {The MIT Press},
+	author = {Milkoreit, Manjana},
+	month = jun,
+	year = {2017},
+	doi = {10.7551/mitpress/10795.001.0001},
+	file = {Snapshot:C\:\\Users\\fenn\\Zotero\\storage\\ACGG7KPK\\Mindmade-PoliticsThe-Cognitive-Roots-of.html:text/html},
+}
+
+@techreport{mockIdeologicalConflictProject2015,
+	title = {The {Ideological} {Conflict} {Project}: {Theoretical} and {Methodological} {Foundations}},
+	url = {https://www.cigionline.org/static/documents/cigi_paper_74_web_0.pdf},
+	language = {en},
+	number = {74},
+	institution = {Centre for International Governance Innovation},
+	author = {Mock, Steven and Homer-Dixon, Thomas},
+	year = {2015},
+	file = {Mock and Homer-Dixon - THE IDEOLOGICAL CONFLICT PROJECT.pdf:C\:\\Users\\fenn\\Zotero\\storage\\AYGWEZ4N\\Mock and Homer-Dixon - THE IDEOLOGICAL CONFLICT PROJECT.pdf:application/pdf},
+}
+
+@book{thagardCognitiveScienceScience2012,
+	title = {The {Cognitive} {Science} of {Science}: {Explanation}, {Discovery}, and {Conceptual} {Change}},
+	isbn = {978-0-262-30097-1},
+	shorttitle = {The {Cognitive} {Science} of {Science}},
+	abstract = {A cognitive science perspective on scientific development, drawing on philosophy, psychology, neuroscience, and computational modeling.Many disciplines, including philosophy, history, and sociology, have attempted to make sense of how science works. In this book, Paul Thagard examines scientific development from the interdisciplinary perspective of cognitive science. Cognitive science combines insights from researchers in many fields: philosophers analyze historical cases, psychologists carry out behavioral experiments, neuroscientists perform brain scans, and computer modelers write programs that simulate thought processes.Thagard develops cognitive perspectives on the nature of explanation, mental models, theory choice, and resistance to scientific change, considering disbelief in climate change as a case study. He presents a series of studies that describe the psychological and neural processes that have led to breakthroughs in science, medicine, and technology. He shows how discoveries of new theories and explanations lead to conceptual change, with examples from biology, psychology, and medicine. Finally, he shows how the cognitive science of science can integrate descriptive and normative concerns; and he considers the neural underpinnings of certain scientific concepts.},
+	language = {en},
+	publisher = {MIT Press},
+	author = {Thagard, Paul},
+	month = apr,
+	year = {2012},
+	note = {Google-Books-ID: HrJIV19\_nZYC},
+	keywords = {Psychology / Cognitive Psychology \& Cognition, Science / Philosophy \& Social Aspects},
+	file = {Thagard - 2012 - The Cognitive Science of Science Explanation, Dis.pdf:C\:\\Users\\fenn\\Zotero\\storage\\J2P627RT\\Thagard - 2012 - The Cognitive Science of Science Explanation, Dis.pdf:application/pdf},
+}
+
+@incollection{thagardMappingMindsCultures2012,
+	title = {Mapping minds across cultures},
+	isbn = {978-0-262-30447-4},
+	abstract = {Exploration of a new integrative intellectual enterprise: the cognitive social sciences.Research in the cognitive sciences has advanced significantly in recent decades. Computational cognitive modeling has profoundly changed the ways in which we understand cognition. Empirical research has progressed as well, offering new insights into many psychological phenomena. This book investigates the possibility of exploiting the successes of the cognitive sciences to establish a better foundation for the social sciences, including the disciplines of sociology, anthropology, economics, and political science. The result may be a new, powerful, integrative intellectual enterprise: the cognitive social sciences.The book treats a range of topics selected to capture issues that arise across the social sciences, covering computational, empirical, and theoretical approaches. The chapters, by leading scholars in both the cognitive and the social sciences, explore the relationship between cognition and society, including such issues as methodologies of studying cultural differences; the psychological basis of politics (for instance, the role of emotion and the psychology of moral choices); cognitive dimensions of religion; cognitive approaches to economics; meta-theoretical questions on the possibility of the unification of social and cognitive sciences. Combining depth and breadth, the book encourages fruitful interdisciplinary interaction across many fields.},
+	language = {en},
+	booktitle = {Grounding {Social} {Sciences} in {Cognitive} {Sciences}},
+	publisher = {MIT Press},
+	author = {Thagard, Paul},
+	month = jul,
+	year = {2012},
+	note = {Google-Books-ID: Dd3xCwAAQBAJ},
+	keywords = {Science / Life Sciences / Neuroscience, Social Science / Essays},
+	pages = {35--60},
+	file = {Thagard - 2012 - Mapping minds across cultures.pdf:C\:\\Users\\fenn\\Zotero\\storage\\3T9UVY45\\Thagard - 2012 - Mapping minds across cultures.pdf:application/pdf},
+}
+
+@article{thagardCriticalThinkingInformal2011,
+	title = {Critical {Thinking} and {Informal} {Logic}: {Neuropsychological} {Perspectives}},
+	volume = {31},
+	copyright = {Copyright (c) 2014 Informal Logic},
+	issn = {2293-734X},
+	shorttitle = {Critical {Thinking} and {Informal} {Logic}},
+	url = {https://informallogic.ca/index.php/informal_logic/article/view/3398},
+	doi = {10.22329/il.v31i3.3398},
+	abstract = {This article challenges the common view that improvements in critical thinking are best pursued by investigations in informal logic. From the perspective of research in psychology and neuroscience, hu-man inference is a process that is multimodal, parallel, and often emo-tional, which makes it unlike the linguistic, serial, and narrowly cog-nitive structure of arguments. At-tempts to improve inferential prac-tice need to consider psychological error tendencies, which are patterns of thinking that are natural for peo-ple but frequently lead to mistakes in judgment. This article discusses two important but neglected error ten-dencies: motivated inference and fear-driven inference.},
+	language = {en},
+	number = {3},
+	urldate = {2022-09-26},
+	journal = {Informal Logic},
+	author = {Thagard, Paul},
+	month = sep,
+	year = {2011},
+	note = {Number: 3},
+	keywords = {Argument, critical thinking, emotion, fear-driven inference, inference, logic, motivated inference, neuroscience, psychology},
+	pages = {152--170},
+	file = {Full Text PDF:C\:\\Users\\fenn\\Zotero\\storage\\QBN3EBLI\\Thagard - 2011 - Critical Thinking and Informal Logic Neuropsychol.pdf:application/pdf},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
