add reliability article

--- a/MyLibrary.bib
+++ b/MyLibrary.bib
@@ -4681,4 +4681,20 @@ Keywords: political ideology, masculinity, gender ideologies, shame, ressentimen
 	file = {Full Text PDF:C\:\\Users\\fenn\\Zotero\\storage\\QBN3EBLI\\Thagard - 2011 - Critical Thinking and Informal Logic Neuropsychol.pdf:application/pdf},
 }
 
+@article{grosCognitiveaffectiveMapsCAMs2024a,
+  title = {Cognitive-Affective Maps ({{CAMs}}) as Measurement Tool -- {{Elaboration}} of Quantitative and Qualitative Test-Retest Reliability},
+  author = {Gros, Wilhelm and Reuter, Lisa and Sprich, Julia and Schuldzinski, Dennis and Fenn, Julius and Kiesel, Andrea},
+  year = {2024},
+  month = sep,
+  journal = {Technology in Society},
+  volume = {78},
+  pages = {102651},
+  issn = {0160791X},
+  doi = {10.1016/j.techsoc.2024.102651},
+  urldate = {2024-10-21},
+  abstract = {Cognitive-Affective Mapping is a novel mind-map like technique enabling to visually represent existing belief systems or any declarative knowledge and can therefore be used in empirical social research. It can be applied broadly, for example to assess technology acceptance, and the obtained data can be analyzed with quantitative and/or qualitative approaches. Here, we aimed for the first time to assess the data quality of Cognitive-Affective Maps (CAMs). To assess whether the findings of CAM studies are due to measurement errors or due to a real effect, we aimed for a quantitative as well as qualitative test-retest reliability approach. Participants (62 in total) drew a CAM online on their cognitions, emotions and experiences regarding the topic "Universal Basic Income" twice with delays of the two measurement time points ranging from 7 to 24 days. Assuming that the evaluation of this topic is driven by values, a stable psychological measurement construct, we presume a high test-retest reliability. Pearson's Product-Moment-Correlations and Spearman's Rank Correlations of CAM parameters show quantitative test-retest reliabilities up to 0.78. Furthermore, two raters identified on average 52 \% of repeated or at least semantically similar concepts drawn by the participants between the two measurement time points. Taken together, these findings are promising for a method with this amount of degrees of freedom.},
+  langid = {english},
+  file = {C:\Users\fenn\Zotero\storage\793IDIVB\Gros et al. - 2024 - Cognitive-affective maps (CAMs) as measurement too.pdf}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
